# udabot_voice_navigation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
docs/figures/: figura2.pptx
firmware/: README_firmware.md
firmware/opencr_modified/: turtlebot3_sensor.cpp
launch/: system.launch
scripts/: audio_processor.py.py  motion_controller.py.py
