<?xml version="1.0"?>
<package format="2">
  <name>udabot_voice_navigation</name>
  <version>1.0.0</version>
  <description>
    Voice-guided navigation package for TurtleBot3 using ReSpeaker 4-Mic Array.
    Implements DOA (Direction of Arrival) and PID control for social robotics.
  </description>

  <maintainer email="pcontreras@uazuay.edu.ec">Paula Contreras</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
</package> 
